--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ a:visited {
 /*--------------------------------------------------------------
 # Post
 --------------------------------------------------------------*/
-
-.single-post article.post .entry-title {
+ステップ１ .single-post article.post .entry-title {
     font-size: 30px;
 }
 
@@ -34,4 +33,12 @@ a:visited {
 .search-no-results #primary .page-content,
 .error404 #primary .page-content {
     float: none;
+}
+
+/*--------------------------------------------------------------
+# Menu
+--------------------------------------------------------------*/
+
+.main-navigation ul li a {
+    font-weight: normal;
 }
