sidebar ul padding edit

--- a/style.css
+++ b/style.css
@@ -50,3 +50,7 @@ a:visited {
 #secondary .widget ul.children li:first-child {
     padding-top: 10px;
 }
+
+#secondary .widget ul.children li:last-child {
+    padding-bottom: 0;
+}
