--- a/style.css
+++ b/style.css
@@ -17,13 +17,23 @@ a:visited {
 /*--------------------------------------------------------------
 # Post
 --------------------------------------------------------------*/
-ステップ１ .single-post article.post .entry-title {
+
+.single-post article.post .entry-title {
     font-size: 30px;
 }
 
 .single-post .related-post article .entry-title {
     font-size: 20px;
     margin-top: 0;
+}
+
+/*--------------------------------------------------------------
+# List
+--------------------------------------------------------------*/
+
+.sticky::before {
+    top: 10px;
+    left: 10px;
 }
 
 /*--------------------------------------------------------------
