--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ a:visited {
     left: 10px;
 }
 
+.has-post-thumbnail .entry-header .entry-title {
+    margin-top: 0;
+}
+
 /*--------------------------------------------------------------
 # Search Result
 --------------------------------------------------------------*/
