small fix for toggle

--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ article.post .entry-meta {
 .single-post article.post .entry-content p,
 .single-post article.post .entry-content ul,
 .single-post article.post .entry-content table,
-.single-post article.post .entry-content figure {
+.single-post article.post .entry-content figure,
+.single-post article.post .entry-content div {
     font-size: 17px;
     margin-bottom: 60px;
 }
@@ -142,7 +143,8 @@ article .entry-content h3 {
 .page article.page .entry-content p,
 .page article.page .entry-content ul,
 .page article.page .entry-content table,
-.page article.page .entry-content figure {
+.page article.page .entry-content figure,
+.page article.page .entry-content div {
     font-size: 17px;
     margin-bottom: 60px;
 }
@@ -315,19 +317,4 @@ article .entry-content h3 {
     font-family: 'ヒラギノ角ゴ ProN W3', Hiragino Sans, 'ヒラギノ角ゴ ProN W3', Hiragino Kaku Gothic ProN, "メイリオ", Meiryo, sans-serif !important;
     font-weight: bold !important;
     font-style: normal;
-}
-
-/*--------------------------------------------------------------
-# Toggle
---------------------------------------------------------------*/
-
-.togglable_evidence {
-    padding: 10px;
-    background: #eee;
-    border-radius: 10px;
-    margin-bottom: 60px;
-}
-
-.togglable_evidence p {
-    margin-bottom: 1rem !important;
 }
