--- a/style.css
+++ b/style.css
@@ -34,6 +34,19 @@ a:visited {
     color: #429ad4;
 }
 
+input,
+textarea {
+    max-width: 100%;
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type="submit"] {
+    width: 100%;
+}
+
 /*--------------------------------------------------------------
 # Layout
 --------------------------------------------------------------*/
