footer ul padding

--- a/style.css
+++ b/style.css
@@ -275,6 +275,14 @@ article .entry-content h3 {
 }
 
 /*--------------------------------------------------------------
+# Foorter
+--------------------------------------------------------------*/
+
+.site-footer ul li ul li:last-child{
+    padding: 10px 0 0;
+}
+
+/*--------------------------------------------------------------
 # SNS
 --------------------------------------------------------------*/
 
