--- a/style.css
+++ b/style.css
@@ -278,9 +278,13 @@ article .entry-content h3 {
 # Foorter
 --------------------------------------------------------------*/
 
-.site-footer ul li ul li:last-child{
-    padding: 10px 0 0;
+.site-footer ul li ul li:last-child {
+    padding-bottom: 0;
 }
+
+/* .site-footer ul li ul {
+    padding-top: 10px;
+} */
 
 /*--------------------------------------------------------------
 # SNS
