--- a/style.css
+++ b/style.css
@@ -375,6 +375,7 @@ article .entry-content h3 {
     padding: 7px 10px;
     min-width: 120px;
     max-width: 100%;
+    min-height: 80px;
     color: #555;
     font-size: 16px;
     background: #e0edff;
