--- a/style.css
+++ b/style.css
@@ -385,6 +385,14 @@ article .entry-content h3 {
 }
 
 /*--------------------------------------------------------------
+# Toggle
+--------------------------------------------------------------*/
+
+.wp-block-ub-content-toggle-accordion-content-wrap *:last-child {
+    margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
 # Appreach
 --------------------------------------------------------------*/
 
